automatically backed up by learn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,5 @@
 <h2>Product Show Page</h2>
+<!-- Add a link to the products show page called "Next Product" that
+ will use AJAX to load the data for the next product without refreshing the page -->
+
+<a href="#" class="next-product" id="Next Product">Next product</a>
