--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,10 @@
 <!-- Add a link to the products show page called "Next Product" that
  will use AJAX to load the data for the next product without refreshing the page -->
 
-<div class="authorName"><%= @product.author.name %></div>
+<div class="authorName"><%= @product.name %></div>
+
 <a href="#" class="js-next" data-id="<%= @product.id %>">Next Product</a>
-<h1 class="productTitle"><%= @product.title %></h1>
+
+<h1 class="productTitle"><%= @product.price %></h1>
 <p class="productBody"><%= @product.description %></p>
+<p class="productInventory"><%= @product.inventory %></p>
