--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,3 +9,14 @@
 <h1 class="productTitle"><%= @product.price %></h1>
 <p class="productBody"><%= @product.description %></p>
 <p class="productInventory"><%= @product.inventory %></p>
+
+<script type="text/javascript" charset="UTF-8">
+  ($function() {
+    $(".js-next").on('click', function() {
+      var nextId = parseInt($('.js-next').attr('data-id')) + 1; //configure the next id
+      $.getJSON("/products/" + nextId + "/data", function(data) {
+
+      });
+    })
+  )};
+</script>
