automatically backed up by learn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
         $(".productDescription").text(data["description"]);
         $(".productInventory").text(data["inventory"]);
         // Make sure to swap out the id paired to the hyperlink for the data-id
-        $(".js-next").attr("data-id", data[:id]);
+        $(".js-next").attr("data-id", data["id"]);
       });
     })
   )};
