--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
 <script type="text/javascript" charset="UTF-8">
   ($function() {
     $(".js-next").on('click', function() {
-      var nextId = parseInt($('.js-next').attr('data-id')) + 1; //configure the next id
+      var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
       $.getJSON("/products/" + nextId + "/data", function(data) {
         $(".productName").text(data["name"]);
         $(".productPrice").text(data["price"]);
