automatically backed up by learn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <script type="text/javascript" charset="UTF-8">
   ($function() {
-    $(".js-next").on('click', function() {
+    $(".js-next").on("click", function() {
       var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
       $.getJSON("/products/" + nextId + "/data", function(data) {
         $(".productName").text(data["name"]);
