--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
 <p class="productDescription"><%= @product.description %></p>
 <p class="productInventory"><%= @product.inventory %></p>
 
-<script type="text/javascript" charset="UTF-8">
+<script type="text/javascript" charset="utf-8">
   $(function () {
     $(".js-next").on("click", function() {
       var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
