automatically backed up by learn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
         $(".productDescription").text(data["description"]);
         $(".productInventory").text(data["inventory"]);
         // Make sure to swap out the id paired to the hyperlink for the data-id
-        $(".js-next").attr("data-id", data[nextId.to_s]);
+        $(".js-next").attr("data-id", data[nextId]);
       });
     })
   )};
