--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,11 +2,11 @@
 <!-- Add a link to the products show page called "Next Product" that
  will use AJAX to load the data for the next product without refreshing the page -->
 
-<div class="productName">Name: <%= @product.name %></div>
 
 <a href="#" class="js-next" data-id="<%= @product.id %>">Next Product</a>
 
-<h1 class="productPrice">Price: <%= @product.price %></h1>
+<p class="productName">Name: <%= @product.name %></p>
+<p class="productPrice">Price: <%= @product.price %></p>
 <p class="productDescription">Description: <%= @product.description %></p>
 <p class="productInventory">Inventory: <%= @product.inventory %></p>
 
