--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,8 +12,8 @@
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
-    $(".js-next").on("click", function(e) {
-      e.preventDefault();
+    $(".js-next").on("click", function() {
+      // e.preventDefault();
       var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
       $.getJSON("/products/" + nextId + "/data", function(data) {
         $(".productName").text(data["name"]);
