--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
 
 <a href="#" class="js-next" data-id="<%= @product.id %>">Next Product</a>
 
-<p class="productName">Name: <%= @product.name %></p>
+<h2 class="productName">Name: <%= @product.name %></h2>
 <p class="productPrice">Price: <%= @product.price %></p>
 <p class="productDescription">Description: <%= @product.description %></p>
 <p class="productInventory">Inventory: <%= @product.inventory %></p>
