--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,19 +10,18 @@
 <p class="productDescription">Description: <%= @product.description %></p>
 <p class="productInventory">Inventory: <%= @product.inventory %></p>
 
+
 <script type="text/javascript" charset="utf-8">
-  $(function () {
-    $(".js-next").on("click", function() {
-      // e.preventDefault();
-      var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
-      $.getJSON("/products/" + nextId + "/data", function(data) {
-        $(".productName").text(data["name"]);
-        $(".productPrice").text(data["price"]);
-        $(".productDescription").text(data["description"]);
-        $(".productInventory").text(data["inventory"]);
-        // Make sure to swap out the id paired to the hyperlink for the data-id
-        $(".js-next").attr("data-id", data["id"]);
-      });
-    })
-  )};
+$(function() {
+  $(".js-next").on("click", function() {
+    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
+    $.getJSON("/products/" + nextId + "/data", function(data) {
+      $(".productName").text(data["name"]);
+      $(".productPrice").text(data["price"]);
+      $(".productDescription").text(data["description"]);
+      $(".productInventory").text(data["inventory"]);
+      $(".js-next").attr("data-id", data["id"]);
+    });
+  });
+});
 </script>
