--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,3 +26,18 @@
     });
   )};
 </script>
+
+<script type="text/javascript" charset="utf-8">
+$(function() {
+  $(".js-next").on("click", function() {
+    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
+    $.getJSON("/products/" + nextId + "/data", function(data) {
+      $(".productName").text(data["name"]);
+      $(".productPrice").text(data["price"]);
+      $(".productDescription").text(data["description"]);
+      $(".productInventory").text(data["inventory"]);
+      $(".js-next").attr("data-id", data["id"]);
+    });
+  });
+});
+</script>
