--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,6 +11,21 @@
 <p class="productInventory">Inventory: <%= @product.inventory %></p>
 
 <script type="text/javascript" charset="utf-8">
+  $(function () {
+    $(".js-next").on("click", function() {
+      var nextId = parseInt($(".js-next").attr("data-id")) + 1; //configure the next id
+      $.getJSON("/products/" + nextId + "/data", function(data) {
+        $(".productName").text(data["name"]);
+        $(".productPrice").text(data["price"]);
+        $(".productDescription").text(data["description"]);
+        $(".productInventory").text(data["inventory"]);
+        $(".js-next").attr("data-id", data["id"]);
+
+      });
+    });
+  )};
+</script>
+
 $(function() {
   $(".js-next").on("click", function() {
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
@@ -23,5 +38,3 @@ $(function() {
     });
   });
 });
-</script>
-
